# decay

./: .gitignore  Cargo.toml  README.md
codecs/json/: Cargo.toml
codecs/json/src/: lib.rs
decay/: Cargo.toml
decay/src/: codec.rs  context.rs  fn_handler.rs  fn_handler_wrapper.rs  handler.rs  json_codec.rs  lib.rs  service.rs
decay_codegen/: Cargo.toml
decay_codegen/src/: codecs.rs  handler_codecs.rs  handler_for.rs  handler_name.rs  lib.rs  utils.rs
decay_macros/: Cargo.toml
decay_macros/src/: lib.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
