[package]
name = "decay-simple"
version = "0.1.0"
authors = ["Jeremy Letang <letang.jeremy@gmail.com>"]

[dependencies]
decay = { version = "*", path = "../../decay" }
decay_macros = { version = "*", path = "../../decay_macros" }
decay_json = { version = "*", path = "../../codecs/json" }
serde = "0.8.9"
serde_derive  = "0.8.9"
